versions/0.8.0/_sources/refs/_aws-cdk_aws-elasticloadbalancing.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"cex9PNjw53uKsKtGwOtuxTvSb1PTMb9bwos2bJn/wHQ="}

@aws-cdk/aws-elasticloadbalancing
=================================

.. mdinclude:: ./__aws-cdk_aws-elasticloadbalancing.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-elasticloadbalancing

LoadBalancerCanonicalHostedZoneName
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: LoadBalancerCanonicalHostedZoneName([valueOrFunction])

   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

LoadBalancerCanonicalHostedZoneNameId
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: LoadBalancerCanonicalHostedZoneNameId([valueOrFunction])

   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

LoadBalancerDnsName
^^^^^^^^^^^^^^^^^^^

.. py:class:: LoadBalancerDnsName([valueOrFunction])

   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

LoadBalancerSourceSecurityGroupGroupName
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: LoadBalancerSourceSecurityGroupGroupName([valueOrFunction])

   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

LoadBalancerSourceSecurityGroupOwnerAlias
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: LoadBalancerSourceSecurityGroupOwnerAlias([valueOrFunction])

   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-elasticloadbalancing.cloudformation

LoadBalancerResource
~~~~~~~~~~~~~~~~~~~~

.. py:class:: LoadBalancerResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``LoadBalancerResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``LoadBalancerResource``
   :type properties: :py:class:`~@aws-cdk/aws-elasticloadbalancing.cloudformation.LoadBalancerResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: loadBalancerCanonicalHostedZoneName

      :type: :py:class:`~@aws-cdk/aws-elasticloadbalancing.LoadBalancerCanonicalHostedZoneName` *(readonly)*


   .. py:attribute:: loadBalancerCanonicalHostedZoneNameId

      :type: :py:class:`~@aws-cdk/aws-elasticloadbalancing.LoadBalancerCanonicalHostedZoneNameId` *(readonly)*


   .. py:attribute:: loadBalancerDnsName

      :type: :py:class:`~@aws-cdk/aws-elasticloadbalancing.LoadBalancerDnsName` *(readonly)*


   .. py:attribute:: loadBalancerSourceSecurityGroupGroupName

      :type: :py:class:`~@aws-cdk/aws-elasticloadbalancing.LoadBalancerSourceSecurityGroupGroupName` *(readonly)*


   .. py:attribute:: loadBalancerSourceSecurityGroupOwnerAlias

      :type: :py:class:`~@aws-cdk/aws-elasticloadbalancing.LoadBalancerSourceSecurityGroupOwnerAlias` *(readonly)*

   .. py:class:: AccessLoggingPolicyProperty



      .. py:attribute:: emitInterval

         ``LoadBalancerResource.AccessLoggingPolicyProperty.EmitInterval``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-accessloggingpolicy.html#cfn-elb-accessloggingpolicy-emitinterval


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: enabled

         ``LoadBalancerResource.AccessLoggingPolicyProperty.Enabled``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-accessloggingpolicy.html#cfn-elb-accessloggingpolicy-enabled


         :type: boolean or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: s3BucketName

         ``LoadBalancerResource.AccessLoggingPolicyProperty.S3BucketName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-accessloggingpolicy.html#cfn-elb-accessloggingpolicy-s3bucketname


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: s3BucketPrefix

         ``LoadBalancerResource.AccessLoggingPolicyProperty.S3BucketPrefix``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-accessloggingpolicy.html#cfn-elb-accessloggingpolicy-s3bucketprefix


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: AppCookieStickinessPolicyProperty



      .. py:attribute:: cookieName

         ``LoadBalancerResource.AppCookieStickinessPolicyProperty.CookieName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-AppCookieStickinessPolicy.html#cfn-elb-appcookiestickinesspolicy-cookiename


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: policyName

         ``LoadBalancerResource.AppCookieStickinessPolicyProperty.PolicyName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-AppCookieStickinessPolicy.html#cfn-elb-appcookiestickinesspolicy-policyname


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: ConnectionDrainingPolicyProperty



      .. py:attribute:: enabled

         ``LoadBalancerResource.ConnectionDrainingPolicyProperty.Enabled``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-connectiondrainingpolicy.html#cfn-elb-connectiondrainingpolicy-enabled


         :type: boolean or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: timeout

         ``LoadBalancerResource.ConnectionDrainingPolicyProperty.Timeout``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-connectiondrainingpolicy.html#cfn-elb-connectiondrainingpolicy-timeout


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: ConnectionSettingsProperty



      .. py:attribute:: idleTimeout

         ``LoadBalancerResource.ConnectionSettingsProperty.IdleTimeout``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-connectionsettings.html#cfn-elb-connectionsettings-idletimeout


         :type: number or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: HealthCheckProperty



      .. py:attribute:: healthyThreshold

         ``LoadBalancerResource.HealthCheckProperty.HealthyThreshold``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-health-check.html#cfn-elb-healthcheck-healthythreshold


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: interval

         ``LoadBalancerResource.HealthCheckProperty.Interval``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-health-check.html#cfn-elb-healthcheck-interval


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: target

         ``LoadBalancerResource.HealthCheckProperty.Target``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-health-check.html#cfn-elb-healthcheck-target


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: timeout

         ``LoadBalancerResource.HealthCheckProperty.Timeout``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-health-check.html#cfn-elb-healthcheck-timeout


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: unhealthyThreshold

         ``LoadBalancerResource.HealthCheckProperty.UnhealthyThreshold``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-health-check.html#cfn-elb-healthcheck-unhealthythreshold


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: LBCookieStickinessPolicyProperty



      .. py:attribute:: cookieExpirationPeriod

         ``LoadBalancerResource.LBCookieStickinessPolicyProperty.CookieExpirationPeriod``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-LBCookieStickinessPolicy.html#cfn-elb-lbcookiestickinesspolicy-cookieexpirationperiod


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: policyName

         ``LoadBalancerResource.LBCookieStickinessPolicyProperty.PolicyName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-LBCookieStickinessPolicy.html#cfn-elb-lbcookiestickinesspolicy-policyname


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: ListenersProperty



      .. py:attribute:: instancePort

         ``LoadBalancerResource.ListenersProperty.InstancePort``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-listener.html#cfn-ec2-elb-listener-instanceport


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: instanceProtocol

         ``LoadBalancerResource.ListenersProperty.InstanceProtocol``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-listener.html#cfn-ec2-elb-listener-instanceprotocol


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: loadBalancerPort

         ``LoadBalancerResource.ListenersProperty.LoadBalancerPort``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-listener.html#cfn-ec2-elb-listener-loadbalancerport


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: policyNames

         ``LoadBalancerResource.ListenersProperty.PolicyNames``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-listener.html#cfn-ec2-elb-listener-policynames


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: protocol

         ``LoadBalancerResource.ListenersProperty.Protocol``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-listener.html#cfn-ec2-elb-listener-protocol


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: sslCertificateId

         ``LoadBalancerResource.ListenersProperty.SSLCertificateId``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-listener.html#cfn-ec2-elb-listener-sslcertificateid


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: PoliciesProperty



      .. py:attribute:: attributes

         ``LoadBalancerResource.PoliciesProperty.Attributes``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-policy.html#cfn-ec2-elb-policy-attributes


         :type: :py:class:`@aws-cdk/cdk.Token` or json or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: instancePorts

         ``LoadBalancerResource.PoliciesProperty.InstancePorts``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-policy.html#cfn-ec2-elb-policy-instanceports


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: loadBalancerPorts

         ``LoadBalancerResource.PoliciesProperty.LoadBalancerPorts``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-policy.html#cfn-ec2-elb-policy-loadbalancerports


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: policyName

         ``LoadBalancerResource.PoliciesProperty.PolicyName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-policy.html#cfn-ec2-elb-policy-policyname


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: policyType

         ``LoadBalancerResource.PoliciesProperty.PolicyType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-policy.html#cfn-ec2-elb-policy-policytype


         :type: string or :py:class:`@aws-cdk/cdk.Token`



LoadBalancerResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: LoadBalancerResourceProps



   .. py:attribute:: listeners

      ``AWS::ElasticLoadBalancing::LoadBalancer.Listeners``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-ec2-elb-listeners


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-elasticloadbalancing.cloudformation.LoadBalancerResource.ListenersProperty` or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: accessLoggingPolicy

      ``AWS::ElasticLoadBalancing::LoadBalancer.AccessLoggingPolicy``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-ec2-elb-accessloggingpolicy


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-elasticloadbalancing.cloudformation.LoadBalancerResource.AccessLoggingPolicyProperty` or undefined


   .. py:attribute:: appCookieStickinessPolicy

      ``AWS::ElasticLoadBalancing::LoadBalancer.AppCookieStickinessPolicy``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-ec2-elb-appcookiestickinesspolicy


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-elasticloadbalancing.cloudformation.LoadBalancerResource.AppCookieStickinessPolicyProperty` or undefined


   .. py:attribute:: availabilityZones

      ``AWS::ElasticLoadBalancing::LoadBalancer.AvailabilityZones``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-ec2-elb-availabilityzones


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: connectionDrainingPolicy

      ``AWS::ElasticLoadBalancing::LoadBalancer.ConnectionDrainingPolicy``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-ec2-elb-connectiondrainingpolicy


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-elasticloadbalancing.cloudformation.LoadBalancerResource.ConnectionDrainingPolicyProperty` or undefined


   .. py:attribute:: connectionSettings

      ``AWS::ElasticLoadBalancing::LoadBalancer.ConnectionSettings``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-ec2-elb-connectionsettings


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-elasticloadbalancing.cloudformation.LoadBalancerResource.ConnectionSettingsProperty` or undefined


   .. py:attribute:: crossZone

      ``AWS::ElasticLoadBalancing::LoadBalancer.CrossZone``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-ec2-elb-crosszone


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: healthCheck

      ``AWS::ElasticLoadBalancing::LoadBalancer.HealthCheck``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-ec2-elb-healthcheck


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-elasticloadbalancing.cloudformation.LoadBalancerResource.HealthCheckProperty` or undefined


   .. py:attribute:: instances

      ``AWS::ElasticLoadBalancing::LoadBalancer.Instances``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-ec2-elb-instances


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: lbCookieStickinessPolicy

      ``AWS::ElasticLoadBalancing::LoadBalancer.LBCookieStickinessPolicy``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-ec2-elb-lbcookiestickinesspolicy


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-elasticloadbalancing.cloudformation.LoadBalancerResource.LBCookieStickinessPolicyProperty` or undefined


   .. py:attribute:: loadBalancerName

      ``AWS::ElasticLoadBalancing::LoadBalancer.LoadBalancerName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-ec2-elb-elbname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: policies

      ``AWS::ElasticLoadBalancing::LoadBalancer.Policies``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-ec2-elb-policies


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-elasticloadbalancing.cloudformation.LoadBalancerResource.PoliciesProperty` or undefined


   .. py:attribute:: scheme

      ``AWS::ElasticLoadBalancing::LoadBalancer.Scheme``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-ec2-elb-scheme


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: securityGroups

      ``AWS::ElasticLoadBalancing::LoadBalancer.SecurityGroups``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-ec2-elb-securitygroups


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: subnets

      ``AWS::ElasticLoadBalancing::LoadBalancer.Subnets``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-ec2-elb-subnets


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: tags

      ``AWS::ElasticLoadBalancing::LoadBalancer.Tags``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-elasticloadbalancing-loadbalancer-tags


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Tag` or undefined



.. py:currentmodule:: @aws-cdk/aws-elasticloadbalancing

